<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- common string -->
    <string name="app_name">ABC旅行预订</string>
    <string name="stringApp">开启旅程</string>
    <string name="about_us">关于我们</string>
    <string name="about_us_content">ABC旅行预订是中国最具颠覆性的无中介旅行预订平台，由杭州惠程信息技术有限公司于2016年创立。ABC旅行预订致力于建立一个优先为酒店业创造价值的预订平台，并帮助客人实现最好的预订体验、最高的预订效率以及最低的旅行成本。\n\nABC旅行预订通过在线平台为酒店提供独一无二的技术基础设施；通过移动客户端，随时随地的为旅行者提供性价比最高、最放心、最真实的旅行产品和最便捷的预订方式。</string>
    <string name="company">杭州惠程信息技术有限公司</string>
    <string name="copyright">Copyright © 2016–2018</string>
    <string name="version">版本介绍</string>
    <string name="versionIntroduce">最具颠覆性的无中介旅行预订平台
                                \n\n－ 没有佣金，价格更低
                                  \n－ 优惠直给，拒绝套路
                                  \n－ 直接联系酒店，预订更放心
                                  \n－ 无竞价排名，还原真实搜索结果
                                  \n－ “房型＋服务”订房模式，效率倍增
    </string>

    <string name="birthdayStr">%1$d-%2$02d-%3$02d</string>
    <string name="yuan">元</string>
    <string name="replace_yuan">%1$d 元</string>
    <string name="lxb_util">%1$d 元</string>
    <string name="multipleSign">×</string>
    <string name="RMB">¥</string>
    <string name="totalRMB">共 ¥</string>
    <string name="rmbStr"> ¥ %1$s </string>
    <string name="rmbStr2">¥%1$d</string>
    <string name="sub_rmbStr2">-¥%1$d</string>
    <string name="titleCityDateStr">%1$s(%2$s)</string>
    <string name="duringDayStr">%1$d天</string>
    <string name="duringNightStr">%1$d晚</string>
    <string name="pointStr">%1$s分</string>
    <string name="track_str">%1$s前有人浏览过</string>
    <string name="prePayStr">预付:%1$s元</string>
    <string name="prePayNotSupport">预付:不支持</string>
    <string name="arrPayStr">到店付:%1$s元</string>
    <string name="arrPayNotSupport">到店付:不支持</string>
    <string name="moreReply"><b>%1$s</b>…等人<b>共%2$d条</b>回复</string>
    <string name="ygrRoomCount">剩余%1$d间</string>
    <string name="ygrNote">只能预订当日夜归人\n已为您推荐 %1$s 夜归人</string>
    <string name="no_coupon_note">最近一次0元住，开放房量%1$d间。</string>
    <string name="coupon_tips_free">— 本券仅限在“%1$s”使用
                            \n\n— 本房券可抵扣1间夜房费（具体详见免费房券使用规则）
                            \n\n— 不可用于店内mini bar、餐饮、小商品等非房费消费
                            \n\n— 不可与其他优惠同时使用、不得兑换现金
                            \n\n— 用房券结算的房费部分，不开具发票
                            \n\n— 点击“立即使用”，选择规定时间内的入住及退房日期，验证成功后提交订单，酒店确认订单后即可生效
                            \n\n— 本券有效期至：%2$s
    </string>
    <string name="coupon_tips_union">1.本券每消费满500元可减免消费款50元，在线支付可立减，酒店现付请出示优惠券凭证号（保存在“ABC旅行预订”APP“我的优惠券”中）；
                            \n\n2.此券不设找零，不兑换现金，不开发票，不可重复使用；
                            \n\n3.本券有效期自2017年11月17日至2018年6月30日，过期作废，遗失不补；
                            \n\n4.本券只限于使用说明中目录酒店使用，解释权归“海南省旅游饭店业协会”所有。
    </string>
    <string name="coupon_tips_support">\n\n支持使用该券的酒店：</string>
    <string name="orderListItemDateStr">入住时间：%1$s-%2$s (%3$d晚)</string>
    <string name="homeTemperatureStr">%1$s℃</string>
    <string name="roomCountStr">%1$d间</string>
    <string name="login_btn">登录</string>
    <string name="forget_pwd">忘记密码</string>

    <!--登录-->
    <string name="user_agree_agreement">我已阅读并同意</string>
    <string name="user_agreement">注册协议</string>
    <string name="user_login">登录</string>
    <string name="login_wx">微信登录</string>
    <string name="login_qq">QQ账号登录</string>
    <string name="user_create">创建账号</string>
    <string name="user_forget_pwd">忘记密码</string>
    <string name="user_register">注册</string>
    <string name="user_reset">重置</string>
    <string name="user_reset_pwd">重置密码</string>
    <string name="user_bind_phone">绑定手机号</string>
    <string name="user_bind">绑定</string>

    <!--我的-->
    <!--侧滑-->
    <string name="side_hi">Hi</string>
    <string name="side_tips">还未登录\nABC旅行预订</string>
    <string name="side_login">立即登录</string>
    <string name="side_register">立即注册</string>
    <string name="side_wait">再转转</string>
    <string name="side_sytk">使用条款</string>
    <string name="side_yssm">隐私声明</string>
    <string name="side_uc">个人中心</string>
    <string name="side_order">我的行程</string>
    <string name="side_msg">消息</string>
    <string name="side_lxb">旅行小金库</string>
    <string name="lxb_how">如何获得旅行币？</string>
    <string name="lxb_current">当前旅行币</string>
    <string name="lxb_in">累计收益</string>
    <string name="lxb_out">累计支出</string>
    <string name="lxb_friends">已邀好友</string>
    <string name="lxb_detail">旅行币明细</string>
    <string name="lxb_empty_tips">暂无旅行币明细</string>
    <string name="side_yhq">我的优惠券</string>
    <string name="side_assess">评价</string>
    <string name="side_fans">粉丝酒店</string>
    <string name="side_setting">设置</string>
    <string name="side_fd">服务支持或意见反馈</string>
    <string name="side_qmh">额度申请</string>
    <string name="service_phone">服务专线</string>
    <string name="hotel_plane_booking">酒店与机票预订：</string>
    <string name="hotel_plane_phone">400–000–8656</string>
    <string name="train_booking">火车票预订：</string>
    <string name="train_phone">400–830–6666</string>
    <string name="taxi_booking">租车预订：</string>
    <string name="taxi_phone">400–616–6666</string>

    <!-- ========个人中心======== -->
    <string name="uc_phone">手机</string>
    <string name="uc_phoneNum">手机号码</string>
    <string name="uc_birthday">出生日期</string>

    <!--设置-->
    <string name="setting">设置</string>
    <string name="setting_version">版本介绍</string>
    <string name="setting_private">隐私声明</string>
    <string name="setting_condition">相关条款</string>
    <string name="setting_usage_condition">使用条款</string>

    <string-array name="order_status">
        <item>所有订单</item>
        <item>待支付</item>
        <item>待确认</item>
        <item>已确认</item>
        <item>已取消</item>
        <item>已完成</item>
    </string-array>

    <string-array name="HotelListTab">
        <item>全日房</item>
        <item>钟点房</item>
        <item>夜归人</item>
        <!--<item>后悔药</item>-->
    </string-array>

    <string-array name="HotelStar">
        <item>三星</item>
        <item>四星</item>
        <item>五星</item>
    </string-array>
    <string-array name="HotelType">
        <item>城市酒店</item>
        <item>度假酒店</item>
        <item>精品民宿</item>
        <item>机场酒店</item>
    </string-array>
    <string-array name="HotelPrice">
        <item>¥300以下</item>
        <item>¥300–400</item>
        <item>¥400–500</item>
        <item>¥500–800</item>
        <item>¥800–1200</item>
        <item>¥1200以上</item>
    </string-array>
    <string-array name="HotelPoint">
        <item>4.5分以上</item>
        <item>3.5–4.5分</item>
        <item>3.5分以下</item>
    </string-array>

    <string-array name="SortString">
        <item>综合评分</item>
        <item>距离优先</item>
    </string-array>

    <string-array name="TravelType">
        <item>商务</item>
        <!--<item>休闲</item>-->
        <!--<item>疗养</item>-->
        <item>度假</item>
        <!--<item>交友</item>-->
        <item>其他</item>
    </string-array>

    <string-array name="HotCity">
        <item>上海</item>
        <item>北京</item>
        <item>深圳</item>
        <item>广州</item>
        <item>杭州</item>
        <item>海口</item>
        <item>武汉</item>
        <item>成都</item>
        <item>三亚</item>
        <item>昆明</item>
    </string-array>

    <string name="iflytek_tips">语音技术由科大讯飞提供</string>
    <string name="test">不应当急于求成，应当去熟悉自己的研究对象，锲而不舍，时间会成全一切。凡事开始最难，然而更难的是何以善终。——莎士比亚</string>
    <string name="test_short">天才是百分之一的灵感加百分之九十九的汗水。——爱迪生</string>

    <string name="freeAct">0元住</string>
    <string name="freeProc">活动流程</string>
    <string name="freeActNote">—注册ABC账号\n—发送活动连接邀请好友\n   一同参与抢房\n—好友注册成功ABC账号后，\n   您的0元抢房权限即刻激活\n—每名注册用户每次活动限\n   抢一张免费房券</string>
    <string name="freeBegin">开始抢房</string>

    <string name="vip_note">您已成为\n以上酒店的粉丝，点击\n预订即可享受\n该酒店的粉丝价！</string>
    <!--酒店列表-->
    <string name="vip_price_tips">粉丝一下  立享更低价</string>
    <string name="point_level_1">超级赞</string><!-->=4.8-->
    <string name="point_level_2">非常棒</string><!-->=4.5-->
    <string name="point_level_3">不错哦</string><!-->=4.0-->

    <string name="order_need_invoice">需要发票</string>
    <string name="order_need_not_invoice">不需要发票</string>
    <string name="order_invoice_tips">需要发票（仅限普通发票）</string>
    <string name="order_submit">提交订单</string>
    <string name="order_topay">去支付</string>
    <string name="order_waitConfirm">订单正在确认，请耐心等待</string>

    <string name="bountyStr">当前可用旅行币%1$d元</string>

    <string name="od_position">位置 / POSITION</string>
    <string name="od_hotel_tel">酒店电话 / HOTEL TEL</string>
    <string name="od_resident">入住人 / RESIDENT</string>
    <string name="od_contact">联系方式 / CONTACT</string>
    <string name="od_special_require">特别要求 / SPECIAL REQUIREMENTS</string>
    <string name="od_invoice">发票信息 / INVOICE INFORMATION</string>
    <string name="od_order_num">订单编号 / ORDER NUMBER</string>
    <string name="od_btn_pay">去支付</string>
    <string name="od_btn_houhuiyao">后悔药</string>
    <string name="od_btn_order_cancel">取消订单</string>
    <string name="od_btn_order_modify">修改订单</string>
    <string name="od_btn_order_confirm">确认修改</string>
    <string name="od_btn_assess">去评论</string>
    <string name="od_btn_rebook">再次预订</string>

    <!--机票-->
    <string name="plane_single">单程</string>
    <string name="plane_double">往返</string>
    <string name="expressPrice">(邮费¥%1$d)</string>
    <string name="passengersStr">(共%1$d人)</string>
    <string name="plane_agreement1">锂电池规定、禁止危险品乘机说明 及 特殊旅客购票须知</string>
    <string name="plane_agreement2">ABC旅行预订会员服务协议（包括0元入住协议）</string>

    <string-array name="PlaneConditionItem">
        <item>起飞时段</item>
        <item>航空公司</item>
        <item>机场</item>
        <item>机型</item>
        <item>仓位</item>
    </string-array>

    <string-array name="flightCang">
        <item>不限</item>
        <item>经济舱</item>
        <item>头等舱</item>
        <item>商务舱</item>
    </string-array>

    <string-array name="flightType">
        <item>不限</item>
        <item>大型机</item>
        <item>中型机</item>
        <item>小型机</item>
    </string-array>

    <string-array name="cardType">
        <item>身份证</item>
        <item>护照</item>
        <item>其他</item>
    </string-array>

    <string-array name="BackTicketReason">
        <item>老子不坐飞机</item>
        <item>老子不想坐飞机</item>
        <item>老子就不想坐飞机</item>
        <item>老子就不坐飞机</item>
    </string-array>

    <string-array name="sex">
        <item>男</item>
        <item>女</item>
    </string-array>

    <string name="current_position">当前位置</string>

    <!--debug info-->
    <string name="debug_menu">Debug Menu</string>
    <string name="debug_change">Change Environment</string>
    <string-array name="EnvItem">
        <item>@string/env_uat</item>
        <item>@string/env_release</item>
        <item>@string/env_develop</item>
        <item>@string/env_demo</item>
        <item>@string/env_local</item>
    </string-array>
    <string name="env_uat">测试环境</string>
    <string name="env_release">生产环境</string>
    <string name="env_develop">研发环境</string>
    <string name="env_demo">演示环境</string>
    <string name="env_local">本地联调</string>
    <string name="change_no">no change</string>
    <string name="change_success">切换成功，即将重启</string>
</resources>