<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_0yuan"
    android:fitsSystemWindows="false"
    android:orientation="vertical">

    <include layout="@layout/comm_title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusable="false"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/freeAct"
            android:textColor="@color/white"
            android:textSize="@dimen/common_32sp"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:contentDescription="@string/freeAct"
            android:scaleType="fitCenter"
            android:src="@drawable/iv_freeonenight" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:paddingBottom="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/freeProc"
                android:textColor="@color/mainColor"
                android:textSize="@dimen/common_18sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/freeActNote"
                android:textColor="@color/mainColor"
                android:textSize="@dimen/common_12sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginBottom="45dp"
            android:layout_marginTop="45dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_start"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/ygr_home_btn_sel"
                android:enabled="false"
                android:text="@string/freeBegin"
                android:textColor="@color/white"
                android:textSize="@dimen/common_18sp" />

            <com.huicheng.hotel.android.ui.custom.RoundedAllImageView xmlns:roundImage="http://schemas.android.com/apk/res-auto"
                android:id="@+id/iv_share"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_marginLeft="10dp"
                android:scaleType="fitXY"
                android:src="@drawable/iv_share"
                roundImage:radius="22.5dp" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>